💄 fix(mq): home info gap

--- a/src/views/home/home.scss
+++ b/src/views/home/home.scss
@@ -29,7 +29,7 @@
     align-items: center;
 
     @include mq(min-width, 700px) {
-      gap: 1rem;
+      gap: 1.25rem;
     }
 
     .info-deg {
